delete adaptive of imgs, fix index width because of transform, fix z-index

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,7 +1,7 @@
 .header {
   min-width: 414px;
   width: 100%;
-  z-index: 1000;
+  z-index: 5;
   padding-top: 16px;
   padding-bottom: 9px;
   position: absolute;
