--- a/src/sass/layout/_about-rest.scss
+++ b/src/sass/layout/_about-rest.scss
@@ -1,4 +1,5 @@
 .about-rest {
+  min-width: 414px;
   padding-top: 16px;
   padding-bottom: 349px;
   @media screen and (min-width: 1024px) {
