--- a/src/sass/layout/_details-of-rest.scss
+++ b/src/sass/layout/_details-of-rest.scss
@@ -112,7 +112,7 @@
 }
 
 .details-of-rest__slider-details {
-  transform: translateX(44px);
+  transform: translateX(42px);
   @include tablet {
     transform: none;
     position: absolute;
